# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yml
adapter/: Cargo.toml
adapter/migrations/: 20241113091129_start.down.sql  20241113091129_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  user.rs
api/src/model/: book.rs  checkout.rs  user.rs
api/src/route/: book.rs
data/: initial_setup.sql
kernel/src/model/book/: mod.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  user.rs
registry/src/: lib.rs
shared/src/: config.rs  error.rs
src/: main.rs
